namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: chat-app
spec: {}
status: {}
