backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - image: abhradippaul/k8s-chatapp-backend
        name: k8s-chatapp-backend
        resources: {}
        ports:
          - containerPort: 5001
status: {}
