database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: database
  name: database
  namespace: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: database
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: database
    spec:
      containers:
      - image: mongo
        name: mongo
        resources: {}
status: {}
